# win-hooks

./: .clang-format  .clangd  CMakeLists.txt
src/: CMakeLists.txt  auto_release.h  hooks.h  key.h  main.cpp
src/console/: CMakeLists.txt  args.h  console.cpp  console.h
src/events/: CMakeLists.txt  key.h  keyboard.cpp  keyboard.h  mouse.h
src/hook/: CMakeLists.txt
src/hooks/: CMakeLists.txt  hooks_base.h  keyboard_hooks.h  mouse_hooks.h
src/registry/: CMakeLists.txt  registry.cpp  registry.h  registry_exception.cpp  registry_exception.h  registry_key.h
src/utils/: CMakeLists.txt  auto_release.h  error.h  exception.cpp  exception.h  formatter.h  log.h
